demos/nginx/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: web
spec:
  serviceName: "nginx"
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginxinc/nginx-unprivileged:1.18
        ports:
        - containerPort: 8080
          name: web
        volumeMounts:
        - name: www
          mountPath: /usr/share/nginx/html
        livenessProbe:
              httpGet:
                path: /
                port: 8080
              initialDelaySeconds: 3
              periodSeconds: 3
        readinessProbe:
              httpGet:
                path: /
                port: 8080
              initialDelaySeconds: 3
              periodSeconds: 3
  volumeClaimTemplates:
  - metadata:
      name: www
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: gp2-csi
      resources:
        requests:
          storage: 1Gi
